styles/css/main.css
body {
  background-color: ivory;
}

a {
  text-decoration: none !important;
  color: rgba(255, 255, 255, 0.8);
  text-shadow: none; 
}

a::before {
  max-width: 0;
  color: white;
  text-decoration: none;
  -webkit-transition: max-width 0.5s;
  -moz-transition: max-width 0.5s;
  transition: max-width 0.5s; 
}

a:hover::before,
a:focus::before {
  max-width: 100%; 
}

#splash {
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  background-color: ivory;
  font-family: Quicksand;
  font-weight: bold;
  font-size: 30px;
  color: #09a9f9; 
}

.logo {
  width: 300px; 
  height: 300px;
  display: block;
  background-image: url(http://fishnerdsupplies.com/images/fish_only_logo.svg);
  background-position: center;
  background-repeat: no-repeat, repeat;
  background-size: 300px 300px;
}

.company_name {
  margin-top: -20px;
  text-align: center;
}

.company_name h3 {
  font-size: 80px;
  font-weight: bold;
  margin-top: -20px;
}

#splash .link--yaku {
  color: red;
  font-family: Quicksand;
  font-weight: bold;
  font-size: 90px;
  margin-top: -30px;
}

#splash .link--yaku:hover::before {
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0); 
}

#splash .link--yaku span {
  display: inline-block;
  -webkit-transform: perspective(1000px) rotate3d(0, 1, 0, 0deg);
  transform: perspective(1000px) rotate3d(0, 1, 0, 0deg);
  -webkit-transition: -webkit-transform 0.5s, color 0.5s;
  transition: transform 0.5s, color 0.5s; 
}

#splash .link--yaku:hover span {
  color: #09a9f9;
  -webkit-transform: perspective(1000px) rotate3d(0, 1, 0, 360deg);
  transform: perspective(1000px) rotate3d(0, 1, 0, 360deg); 
}

#splash .link--yaku span:nth-child(11),
#splash .link--yaku:hover span:first-child {
  -webkit-transition-delay: 0s;
  transition-delay: 0s; 
}

#splash .link--yaku span:nth-child(10),
#splash .link--yaku:hover span:nth-child(2) {
  -webkit-transition-delay: 0.1s;
  transition-delay: 0.1s; 
}

#splash .link--yaku span:nth-child(9),
#splash .link--yaku:hover span:nth-child(3) {
  -webkit-transition-delay: 0.2s;
  transition-delay: 0.2s; 
}

#splash .link--yaku span:nth-child(8),
#splash .link--yaku:hover span:nth-child(4) {
  -webkit-transition-delay: 0.3s;
  transition-delay: 0.3s; 
}

#splash .link--yaku span:nth-child(7),
#splash .link--yaku:hover span:nth-child(5) {
  -webkit-transition-delay: 0.4s;
  transition-delay: 0.4s; 
}

#splash .link--yaku span:nth-child(6),
#splash .link--yaku:hover span:nth-child(6) {
  -webkit-transition-delay: 0.5s;
  transition-delay: 0.5s; 
}

#splash .link--yaku span:nth-child(5),
#splash .link--yaku:hover span:nth-child(7) {
  -webkit-transition-delay: 0.6s;
  transition-delay: 0.6s; 
}

#splash .link--yaku span:nth-child(4),
#splash .link--yaku:hover span:nth-child(8) {
  -webkit-transition-delay: 0.7s;
  transition-delay: 0.7s; 
}

#splash .link--yaku span:nth-child(3),
#splash .link--yaku:hover span:nth-child(9) {
  -webkit-transition-delay: 0.8s;
  transition-delay: 0.8s; 
}

#splash .link--yaku span:nth-child(2),
#splash .link--yaku:hover span:nth-child(10) {
  -webkit-transition-delay: 0.9s;
  transition-delay: 0.9s; 
}

#splash .link--yaku span:first-child,
#splash .link--yaku:hover span:nth-child(11) {
  -webkit-transition-delay: 1.1s;
  transition-delay: 1.1s; 
}

@media screen and (min-width: 320px) and (max-width: 768px) {
  #splash .link--yaku {
    font-size: 30px;
  }
  .company_name h3 {
    font-size: 40px;
    margin-top: -40px;
  }
  .logo {
    background-size: 250px;
    background-image: url(http://fishnerdsupplies.com/images/fish_only_logo.png);
  }
  .spinning_text {
    margin-top: 20px;
  }
}

